crates/hexeract-macros/tests/ui/fail_notification_non_unit.stderr
error: a notification handler must return `Result<(), Error>`
  --> tests/ui/fail_notification_non_unit.rs:13:73
   |
13 |     async fn handle(&self, _n: Arc<N>, _ctx: &HandlerContext) -> Result<i32, HexeractError> {
   |                                                                         ^^^

warning: unused import: `std::sync::Arc`
 --> tests/ui/fail_notification_non_unit.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `HandlerContext` and `HexeractError`
 --> tests/ui/fail_notification_non_unit.rs:3:21
  |
3 | use hexeract_core::{HandlerContext, HexeractError, Notification};
  |                     ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^
